# MCH_MacOS_VM

./: .gitignore  CMakeLists.txt  MCH_IMPLEMENTATION_AUDIT.md  MCH_REALITY_CHECK.md  MCH_TESTING_CHECKLIST.md  README.md  REAPER_TESTING_CHECKLIST.md  TASKS.md  macos_mch_tasks.md  prd_binaural_speaker_room_vst_3.md  prd_multichannel_binaural_renderer_extension.md  tasks_mch.md
.github/: copilot-instructions.md
.github/workflows/: macos-build.yml  windows-build.yml
Source/: BinauralConvolver.cpp  BinauralConvolver.h  IRLoader.cpp  IRLoader.h  LayoutPreset.h  MchBinauralRenderer.cpp  MchBinauralRenderer.h  MchDryRouting.h  MchSlotIrManager.cpp  MchSlotIrManager.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpeakerPairProcessor.cpp  SpeakerPairProcessor.h
Tests/: BinauralConvolverTests.h  IRLoaderTests.h  LayoutPresetTests.h  MchBinauralRendererTests.h  MchDryRoutingTests.h  MchSlotIrManagerTests.h  ParameterTests.h  TestMain.cpp
docs/: MCH_UI_IMPLEMENTATION_COMPLETE.md
docs/phase-handoffs/: _template.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04-reaper-hardening-checklist.md  phase-04.md  phase-05.md  phase-06.md
docs/phase-handoffs-macos/: phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md
docs/phase-handoffs-mch/: _template.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06-pluginval-fix-2026-05-19.md  phase-06-pluginval-iteration-2026-05-15.md  phase-06.md  phase-bugfix-2026-05-19.md
test_session/: test_session.rpp
tools/github-actions/: run-macos-ci-gh.ps1
tools/pluginval/: run_strict.ps1
